# pendulum-raylib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: circle.h  game.h  gui.h  list_operations.h  random.h  save.h
saves/: basic.json  big_apple.json  chaos.json  good_pattern.json  rainbow.json  save.json  solar_system.json  stick.json
src/: CMakeLists.txt  circle.c  circle.h  game.c  gui.c  list_operations.c  main.c  save.c
